utilizando control flow condicional, iteração pt. 1

--- a/src/app/components/template/template-binding/template-binding.component.html
+++ b/src/app/components/template/template-binding/template-binding.component.html
@@ -13,3 +13,8 @@
 <p>
     {{ condition }}
 </p>
+
+<h2>Property binding</h2>
+<button [disabled]="isDisabled">Button</button>
+
+<img [src]="srcValue">
